<resources>
    <string name="app_name">RideNow</string>
    <string name="my_map_api_key">AIzaSyAIBuH45lw-2q4GnINKq9dA_upx9sVmfso</string>
    <string name="title_activity_splash_entry">SplashEntry</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="car">car image</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="register">Register</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="driving_license_photo">Driving license photo</string>
    <string name="upload_driving_license">Upload Driving License</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="register_here">Register Here</string>
    <string name="search_for_rides">Search For Rides</string>
    <string name="search">search</string>
    <string name="login">Login</string>
    <string name="from_destination">From Destination</string>
    <string name="from_address">from_Address</string>
    <string name="avaliable_rides">avaliable rides</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="create_a_ride">Create A ride</string>
    <string name="ridenow">RideNow</string>
    <string name="enter_your_registered_email_to_reset_your_password">Enter your registered email to reset your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_the_price">Enter the price</string>
    <string name="upload_the_ride">upload the ride</string>
    <string name="enter_the_price_in_dollars" />
    <string-array name="locations_array">
        <item> Select Location</item>
        <item>Toronto</item>
        <item>Montreal</item>
        <item>Ottawa</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rides_list">Rides_list</string>

</resources>