<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/car"

    android:padding="16dp">


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_here"
        android:textSize="30sp"
        android:textColor="#00C6EE"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="50dp" />

    <EditText
        android:id="@+id/driverusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Please enter username"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/please_enter_email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:layout_marginBottom="20dp" />


    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/please_enter_password"
        android:inputType="textPassword"
        android:padding="16dp"

        android:layout_marginBottom="20dp" />


    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="16dp"

        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/driverphonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:hint="Enter your PhoneNumber"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:inputType="number"
        />





    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:backgroundTint="#03A9F4"
        android:layout_marginBottom="10dp"

        />

    <TextView
        android:id="@+id/registerLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_register"
        android:textColor="#03A9F4"
        android:linksClickable="true"
        android:autoLink="web"
        android:layout_gravity="end"
        />









</LinearLayout>
